--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.3.1
 Django==3.1.7
+django-ckeditor==6.0.0
+django-js-asset==1.2.2
 djangorestframework==3.12.2
+psycopg2-binary==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
