--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
+cssselect==1.1.0
 Django==3.1.7
 django-ckeditor==6.0.0
 django-js-asset==1.2.2
 djangorestframework==3.12.2
+lxml==4.6.2
+markdown2==2.4.0
 psycopg2-binary==2.8.6
+pyquery==1.4.3
 pytz==2021.1
+readtime==1.1.1
+soupsieve==2.2
 sqlparse==0.4.1
