--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
+Brotli==1.0.9
 cssselect==1.1.0
 Django==3.1.7
+django-bootstrap4==2.3.1
 django-ckeditor==6.0.0
+django-compression-middleware==0.4.1
 django-js-asset==1.2.2
 djangorestframework==3.12.2
 lxml==4.6.2
@@ -12,3 +16,4 @@ pytz==2021.1
 readtime==1.1.1
 soupsieve==2.2
 sqlparse==0.4.1
+zstandard==0.15.2
