--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
 Brotli==1.0.9
+certifi==2020.12.5
+chardet==4.0.0
 cssselect==1.1.0
 Django==3.1.7
 django-bootstrap4==2.3.1
@@ -8,12 +10,29 @@ django-ckeditor==6.0.0
 django-compression-middleware==0.4.1
 django-js-asset==1.2.2
 djangorestframework==3.12.2
+idna==2.10
 lxml==4.6.2
 markdown2==2.4.0
+Pillow==8.2.0
 psycopg2-binary==2.8.6
 pyquery==1.4.3
+python-dateutil==2.8.1
 pytz==2021.1
+pyuploadcare==2.7.0
 readtime==1.1.1
+requests==2.25.1
+six==1.15.0
 soupsieve==2.2
 sqlparse==0.4.1
+urllib3==1.26.4
 zstandard==0.15.2
+
+astroid==2.3.3
+dj-database-url==0.5.0
+django-heroku==0.3.1
+isort==4.3.21
+lazy-object-proxy==1.4.3
+
+python-decouple==3.1
+text-unidecode==1.3
+whitenoise==4.1.4
