--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,57 @@
 asgiref==3.3.1
+astroid==2.3.3
 beautifulsoup4==4.9.3
 Brotli==1.0.9
 certifi==2020.12.5
 chardet==4.0.0
 cssselect==1.1.0
+dj-database-url==0.5.0
 Django==3.1.7
+django-appconf==1.0.4
 django-bootstrap4==2.3.1
 django-ckeditor==6.0.0
 django-compression-middleware==0.4.1
+django-compressor==2.4
+django-crispy-forms==1.11.2
+django-heroku==0.3.1
 django-js-asset==1.2.2
+django-photologue==3.13
+django-sass-processor==1.0.0
+django-sorted-m2m==2.0.0
+django-sortedm2m==3.0.2
 djangorestframework==3.12.2
+ExifRead==2.3.2
+Faker==2.0.3
+gunicorn==20.1.0
 idna==2.10
+isort==4.3.21
+lazy-object-proxy==1.4.3
+libsass==0.20.1
 lxml==4.6.2
 markdown2==2.4.0
+mccabe==0.6.1
 Pillow==8.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pylint==2.7.4
+pyperclip==1.7.0
 pyquery==1.4.3
 python-dateutil==2.8.1
+python-decouple==3.1
 pytz==2021.1
 pyuploadcare==2.7.0
+rcssmin==1.0.6
 readtime==1.1.1
 requests==2.25.1
+rjsmin==1.1.0
 six==1.15.0
 soupsieve==2.2
 sqlparse==0.4.1
+text-unidecode==1.3
+toml==0.10.2
 urllib3==1.26.4
+whitenoise==4.1.4
+wrapt==1.11.2
 zstandard==0.15.2
 
-astroid==2.3.3
-dj-database-url==0.5.0
-django-heroku==0.3.1
-isort==4.3.21
-lazy-object-proxy==1.4.3
-
-python-decouple==3.1
-text-unidecode==1.3
-whitenoise==4.1.4
+django-braces~=1.14.0
