--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,85 @@
-asgiref==3.3.1
-astroid==2.3.3
+alabaster==0.7.12
+aniso8601==9.0.1
+asgiref==3.3.4
+Babel==2.9.0
 beautifulsoup4==4.9.3
+boto3==1.17.53
+botocore==1.20.53
 Brotli==1.0.9
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
+colorama==0.4.4
 cssselect==1.1.0
+cycler==0.10.0
 dj-database-url==0.5.0
-Django==3.1.7
-django-appconf==1.0.4
-django-bootstrap4==2.3.1
+Django==3.2
+django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-compression-middleware==0.4.1
-django-compressor==2.4
-django-crispy-forms==1.11.2
 django-heroku==0.3.1
 django-js-asset==1.2.2
-django-photologue==3.13
-django-sass-processor==1.0.0
-django-sorted-m2m==2.0.0
-django-sortedm2m==3.0.2
-djangorestframework==3.12.2
-ExifRead==2.3.2
-Faker==2.0.3
+django-storages==1.11.1
+docutils==0.16
+Flask==1.1.2
+Flask-Jsonpify==1.5.0
+Flask-RESTful==0.3.8
+futures==3.1.1
 gunicorn==20.1.0
+h5py==3.2.1
 idna==2.10
-isort==4.3.21
-lazy-object-proxy==1.4.3
-libsass==0.20.1
-lxml==4.6.2
+imagesize==1.2.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+jmespath==0.10.0
+joblib==1.0.1
+Keras==2.4.3
+kiwisolver==1.3.1
+lxml==4.6.3
+Markdown==3.3.4
 markdown2==2.4.0
-mccabe==0.6.1
+MarkupSafe==1.1.1
+matplotlib==3.4.1
+numpy==1.20.2
+opencv-python==4.5.1.48
+packaging==20.9
+pandas==1.2.4
 Pillow==8.2.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
-pylint==2.7.4
-pyperclip==1.7.0
+Pygments==2.8.1
+pyparsing==2.4.7
+pyperclip==1.8.2
 pyquery==1.4.3
 python-dateutil==2.8.1
-python-decouple==3.1
 pytz==2021.1
 pyuploadcare==2.7.0
-rcssmin==1.0.6
+PyYAML==5.4.1
 readtime==1.1.1
 requests==2.25.1
-rjsmin==1.1.0
+s3==3.0.0
+s3transfer==0.3.7
+scikit-learn==0.24.1
+scipy==1.6.2
+seaborn==0.11.1
 six==1.15.0
-soupsieve==2.2
+snowballstemmer==2.1.0
+soupsieve==2.2.1
+Sphinx==3.5.4
+sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.4.1
-text-unidecode==1.3
-toml==0.10.2
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tqdm==4.60.0
+transfer==0.40
 urllib3==1.26.4
-whitenoise==4.1.4
-wrapt==1.11.2
+Werkzeug==1.0.1
+whitenoise==5.2.0
+xmltodict==0.12.0
 zstandard==0.15.2
-
-django-braces~=1.14.0
