--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ docutils==0.16
 Flask==1.1.2
 Flask-Jsonpify==1.5.0
 Flask-RESTful==0.3.8
+fontawesome==5.10.1.post1
 futures==3.1.1
 gunicorn==20.1.0
 h5py==3.2.1
@@ -45,6 +46,7 @@ opencv-python==4.5.1.48
 packaging==20.9
 pandas==1.2.4
 Pillow==8.2.0
+pip-check-reqs==2.3.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 Pygments==2.8.1
