--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ dj-database-url==0.5.0
 Django==3.2
 django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
+django-cleanup==5.2.0
 django-compression-middleware==0.4.1
+django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
 django-storages==1.11.1
@@ -34,7 +36,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 joblib==1.0.1
-Keras==2.4.3
 kiwisolver==1.3.1
 lxml==4.6.3
 Markdown==3.3.4
