--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ django-compression-middleware==0.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
+django-pwa==1.0.10
 django-storages==1.11.1
 docutils==0.16
 Flask==1.1.2
