--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
 django-pwa==1.0.10
+django-s3-folder-storage==0.5
 django-storages==1.11.1
 docutils==0.16
 Flask==1.1.2
@@ -52,6 +53,7 @@ pip-check-reqs==2.3.0
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 Pygments==2.8.1
+pylibmc==1.6.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 pyquery==1.4.3
