--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cssselect==1.1.0
 cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.2
+django-bmemcached==0.3.0
 django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
@@ -57,6 +58,7 @@ pylibmc==1.6.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 pyquery==1.4.3
+python-binary-memcached==0.30.1
 python-dateutil==2.8.1
 pytz==2021.1
 pyuploadcare==2.7.0
@@ -84,6 +86,7 @@ termcolor==1.1.0
 threadpoolctl==2.1.0
 tqdm==4.60.0
 transfer==0.40
+uhashring==2.1
 urllib3==1.26.4
 Werkzeug==1.0.1
 whitenoise==5.2.0
