--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,13 @@ cssselect==1.1.0
 cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.2
+django-appconf==1.0.4
 django-bmemcached==0.3.0
 django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
 django-compression-middleware==0.4.1
+django-compressor==2.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
@@ -63,8 +65,10 @@ python-dateutil==2.8.1
 pytz==2021.1
 pyuploadcare==2.7.0
 PyYAML==5.4.1
+rcssmin==1.0.6
 readtime==1.1.1
 requests==2.25.1
+rjsmin==1.1.0
 s3==3.0.0
 s3transfer==0.3.7
 scikit-learn==0.24.1
