--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
 django-compression-middleware==0.4.1
+django-compressor
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-js-asset==1.2.2
