--- a/requirements.txt
+++ b/requirements.txt
@@ -6,23 +6,24 @@ beautifulsoup4==4.9.3
 boto3==1.17.53
 botocore==1.20.53
 Brotli==1.0.9
+calmjs.parse==1.2.5
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
+csscompressor==0.9.5
 cssselect==1.1.0
 cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.2
-django-appconf==1.0.4
 django-bmemcached==0.3.0
 django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
 django-compression-middleware==0.4.1
-django-compressor==2.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
+django-htmlmin==0.11.0
 django-js-asset==1.2.2
 django-pwa==1.0.10
 django-s3-folder-storage==0.5
@@ -35,6 +36,7 @@ fontawesome==5.10.1.post1
 futures==3.1.1
 gunicorn==20.1.0
 h5py==3.2.1
+html5lib==1.1
 idna==2.10
 imagesize==1.2.0
 itsdangerous==1.1.0
@@ -53,10 +55,10 @@ packaging==20.9
 pandas==1.2.4
 Pillow==8.2.0
 pip-check-reqs==2.3.0
+ply==3.11
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 Pygments==2.8.1
-pylibmc==1.6.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 pyquery==1.4.3
@@ -92,6 +94,7 @@ tqdm==4.60.0
 transfer==0.40
 uhashring==2.1
 urllib3==1.26.4
+webencodings==0.5.1
 Werkzeug==1.0.1
 whitenoise==5.2.0
 xmltodict==0.12.0
