--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ cssselect==1.1.0
 cycler==0.10.0
 dj-database-url==0.5.0
 Django==3.2
+django-appconf==1.0.4
 django-bmemcached==0.3.0
 django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
 django-compression-middleware==0.4.1
+django-compressor==2.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-htmlmin==0.11.0
@@ -64,6 +66,7 @@ pyperclip==1.8.2
 pyquery==1.4.3
 python-binary-memcached==0.30.1
 python-dateutil==2.8.1
+python-memcached==1.59
 pytz==2021.1
 pyuploadcare==2.7.0
 PyYAML==5.4.1
