--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-bootstrap4==3.0.0
 django-ckeditor==6.0.0
 django-cleanup==5.2.0
 django-compression-middleware==0.4.1
+django-compressor==2.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
 django-htmlmin==0.11.0
@@ -44,6 +45,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 joblib==1.0.1
+keras==2.6.0
 kiwisolver==1.3.1
 lxml==4.6.3
 Markdown==3.3.4
@@ -83,6 +85,12 @@ snowballstemmer==2.1.0
 soupsieve==2.2.1
 Sphinx==3.5.4
 sphinx-rtd-theme==0.5.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 sqlparse==0.4.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
