--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ ply==3.11
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 Pygments==2.8.1
+pylibmc==1.6.1
 pyparsing==2.4.7
 pyperclip==1.8.2
 pyquery==1.4.3
