--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,11 @@ django-compression-middleware==0.4.1
 django-compressor==2.4.1
 django-crispy-forms==1.12.0
 django-heroku==0.3.1
+django-heroku-memcacheify==1.0.0
 django-htmlmin==0.11.0
 django-js-asset==1.2.2
 django-pwa==1.0.10
+django-pylibmc==0.6.1
 django-s3-folder-storage==0.5
 django-storages==1.11.1
 docutils==0.16
@@ -83,6 +85,7 @@ scipy==1.6.2
 seaborn==0.11.1
 six==1.15.0
 snowballstemmer==2.1.0
+sorl-thumbnail==12.7.0
 soupsieve==2.2.1
 Sphinx==3.5.4
 sphinx-rtd-theme==0.5.2
